# Writing_Harness

.devcontainer/: devcontainer.json
writer-harness/: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup.cfg
writer-harness/harness/: __init__.py  cli.py  config.py  models.py  prompt_builder.py
writer-harness/harness/lint/: __init__.py  continuity.py  rules.py  style.py
writer-harness/harness/lore/: __init__.py  ingest.py  retrieve.py
writer-harness/harness/pipelines/: __init__.py  draft.py  revise.py
writer-harness/harness/providers/: __init__.py  anthropic_provider.py  openai_provider.py
writer-harness/tests/: test_cli.py  test_config.py  test_lint_continuity.py  test_lint_rules.py  test_lint_style.py  test_lore.py  test_models.py  test_pipelines.py  test_prompt_builder.py  test_providers.py
