[tool.poetry]
name = "writing-harness"
version = "0.1.0"
description = "CLI tool for enforcing continuity and style in serialized narratives"
packages = [{include = "harness"}]

[tool.poetry.dependencies]
python = ">=3.11"
pydantic = ">=2.0"
pydantic-settings = ">=2.0"
rich = ">=13.0"
python-dotenv = ">=1.0"
PyYAML = ">=6.0"
anthropic = ">=0.28"
openai = ">=1.0"
rapidfuzz = ">=3.0"
click = ">=8.0"
streamlit = ">=1.30"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
harness = "harness.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-cov = ">=4.0"
black = ">=23.0"
ruff = ">=0.1"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["harness"]

[tool.coverage.report]
show_missing = true
skip_empty = true
